Fix display on mobile

--- a/docs/css/theme-basic.css
+++ b/docs/css/theme-basic.css
@@ -4,7 +4,7 @@ body {
 
 .wrapper {
     text-align: center;
-    width: 500px;
+    width: 510px;
     margin: auto;
 }
 
@@ -19,7 +19,7 @@ body {
 }
 
 #console {
-    width: 450px;
+    width: 460px;
     height: 361px;
     padding-right: 10px;
     overflow: hidden;
@@ -41,7 +41,7 @@ body {
 .monitor-shell {
     position: relative;
     margin: auto;
-    width: 500px;
+    width: 510px;
     padding: 0 0 10px 0;
     background-color: #444;
 }
