--- a/docs/css/theme-simple.css
+++ b/docs/css/theme-simple.css
@@ -27,7 +27,7 @@
 .monitor-shell {
     position: relative;
     margin: auto;
-    width: 500px;
+    width: 510px;
     background-color: rgb(134, 134, 134);
     padding: 30px 30px 50px 30px;
     border-radius: 30px;
